<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cmput301f17t07.ingroove.avehabit.AddViewEditHabitActivity">


    <TextView
        android:id="@+id/view_habit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/habit_name_hint"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/view_habit_comment_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment_header"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/view_habit_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/view_habit_start_date_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="This habit started on"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/view_habit_start_date_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/habit_events_header"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ListView
            android:id="@+id/view_habit_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>
    </LinearLayout>

    <Button
        android:id="@+id/view_habit_log_event_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_habit_event" />

    <Button
        android:id="@+id/view_habit_stats_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_habit_stats" />

    <Button
        android:id="@+id/view_habit_edit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Edit" />

    <Button
        android:id="@+id/view_habit_del_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_habit" />


</LinearLayout>
