...
                <SearchView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/SearchHabitsBox" />

                <GridView
                    android:id="@+id/HabitViewer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/AddHabitButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
...
